--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,54 +1,66 @@
-version: '3.8'
+
+version: "3.7"
 
 services:
-  frontend:
-    build:
-      context: ./frontend
-    container_name: frontend
-    ports:
-      - "3000:80"
-    networks:
-      - webnet
-
   backend:
     build:
       context: ./backend
     container_name: backend
+    env_file:
+      - ./backend/.env
+    depends_on:
+      - db
+
+  frontend:
+    build:
+      context: ./frontend
+    container_name: frontend
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    env_file:
+      - ./frontend/.env
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx
     ports:
-      - "8000:8000"
-    environment:
-      - DATABASE_URL=postgresql://postgres:password@db:5432/postgres
-    networks:
-      - webnet
+      - "80:80"
+        #      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - /etc/letsencrypt:/etc/letsencrypt
 
   db:
-    image: postgres:12
+    image: postgres:latest
     container_name: db
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
     ports:
       - "5432:5432"
-    networks:
-      - webnet
+    env_file:
+      - ./backend/.env
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
 
   adminer:
-    image: adminer
+    image: adminer:latest
     container_name: adminer
     ports:
       - "8080:8080"
-    networks:
-      - webnet
+    environment:
+      - ADMINER_DEFAULT_SERVER=db
 
-  proxy:
-    image: nginx
-    container_name: proxy
+  proxy-manager:
+    image: jc21/nginx-proxy-manager:latest
+    container_name: proxy-manager
     ports:
-      - "80:80"
+      - "81:81" # Management UI
+      - "8090:8090" # HTTP port
+      - "443:443" # HTTPS port
+        # - "8443:8443" # HTTPS port
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-    networks:
-      - webnet
+      - npm-data:/data
+      - npm-letsencrypt:/etc/letsencrypt
 
-networks:
-  webnet:
+volumes:
+  postgres-data:
+  npm-data:
+  npm-letsencrypt:
