--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,30 @@
-FROM node:14
+
+# FROM node:20
+
+# # Set working directory
+# WORKDIR /app
+
+# # Install dependencies
+# COPY package*.json ./
+# RUN npm install
+
+# # Copy the rest of the application
+# COPY . .
+
+# # Build the application
+# CMD npm run dev -- --host 0.0.0.0
+
+# # Use a smaller image for serving the build
+# FROM nginx:alpine
+# COPY --from=dev /app/dist /usr/share/nginx/html
+
+# # Expose port 80
+# EXPOSE 80
+
+
+
+# Stage 1: Build the application
+FROM node:20 AS build
 
 # Set working directory
 WORKDIR /app
@@ -13,11 +39,14 @@ COPY . .
 # Build the application
 RUN npm run build
 
-# Use a smaller image for serving the build
+# Stage 2: Serve the build with Nginx
 FROM nginx:alpine
-COPY --from=0 /app/build /usr/share/nginx/html
+
+# Copy the build from the previous stage
+COPY --from=build /app/dist /usr/share/nginx/html
 
 # Expose port 80
-EXPOSE 80
+EXPOSE 4173
 
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["npm","run","preview","--","--host", "0.0.0.0"]
+
